--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -4,4 +4,4 @@ steps:
   - "app"
   - "deploy"
   - "app.yaml"
-  - "--image-url=gcr.io/$PROJECT_ID/my-app"
+  - "--image-url=gcr.io/prak-tcc-d/my-app"
